DemoMyApp/src/objects/Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comparison_Key__c</fullName>
        <label>Comparison Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPerson__c</fullName>
        <label>Contact Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DEBUG_Child_of_a_Child__c</fullName>
        <formula>IF(ISBLANK(Parent__r.Parent__c), NULL, &apos;Yes&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEBUG: Child of a Child</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee or Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Essay_Requirement_Affirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Essay Requirement Affirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exam_Type__c</fullName>
        <label>Exam: Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cambridge Advanced or Higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IELTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pearson/PTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOEFL or Equivalent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOEIC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Sponsor__c</fullName>
        <label>Family Sponsor</label>
        <picklist>
            <controllingField>Sponser__c</controllingField>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Parents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FaxAreaCode__c</fullName>
        <label>Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaxCountryCode__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>93</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FaxNo__c</fullName>
        <label>Main No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_CountryCode__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Requirements (Country)</relationshipLabel>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <description>This is the GPA for UG or High School</description>
        <label>GPA</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>System field used for de-duping requirements on insert to the Opp.</description>
        <label>Identifier (Unique)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mismatched_Contact__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)) &amp;&amp; NOT(ISBLANK(Opportunity__r.Contact__c)) &amp;&amp; Contact__c !=  Opportunity__r.Contact__c, &apos;Yes&apos;, NULL)</formula>
        <label>Mismatched Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mismatched_Departments__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent__r.Department__c)) &amp;&amp; Opportunity__r.Program__r.Department__c != Parent__r.Department__c, &apos;Yes&apos;, NULL)</formula>
        <label>Mismatched Departments?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Program_Department__c</fullName>
        <formula>Opportunity__r.Program__r.Department__r.Name</formula>
        <label>Opportunity: Program Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Opportunity: Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orphaned__c</fullName>
        <formula>IF(OR(ISBLANK(Opportunity__c) &amp;&amp; ISBLANK(Parent__c) &amp;&amp; ISBLANK(Country__c) &amp;&amp; ISBLANK(Department__c) &amp;&amp; ISBLANK(Program__c), NOT(ISBLANK(Opportunity__c)) &amp;&amp; ISBLANK(Parent__c)), &apos;Yes&apos;, NULL)</formula>
        <label>Orphaned?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Requirement_Department__c</fullName>
        <formula>Parent__r.Department__r.Name</formula>
        <label>Parent Requirement: Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Application Requirements</relationshipLabel>
        <relationshipName>Opportunity_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PhoneAreaCode__c</fullName>
        <label>Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneCountryCode__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>93</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>57</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PhoneNo__c</fullName>
        <label>Main No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Country_Code__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Requirements (Country)</relationshipLabel>
        <relationshipName>Requirements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommendation_Analytical_Ability__c</fullName>
        <label>Recommendation: Analytical Ability</label>
        <picklist>
            <picklistValues>
                <fullName>Outstanding (Top 5%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superior (Top Third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average (Middle Third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor (Bottom Third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendation_Background__c</fullName>
        <inlineHelpText>How long have you known the applicant and in what context?</inlineHelpText>
        <label>Recommendation: Background</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_Comments__c</fullName>
        <inlineHelpText>Please comment on the Applicant as to relevant intellectual and administrative competence, ability to work with others, capacity in oral expression, imagination and probable creativity and other personal qualities that you believe would be helpful to the</inlineHelpText>
        <label>Recommendation: Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_Company__c</fullName>
        <formula>Recommendation_Contact__r.Recommender_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommendation: Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Contact__c</fullName>
        <label>Recommendation: Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requirements (Recommendation: Contact)</relationshipLabel>
        <relationshipName>Requirements_By_Recommentation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommendation_Decision__c</fullName>
        <label>Recommendation: Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Recommend Strongly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommend With Reservations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Recommend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendation_Email_Address__c</fullName>
        <formula>Recommendation_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommendation: Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_English_Ability__c</fullName>
        <inlineHelpText>Please provide your appraisal of the Applicant&apos;s ability to read, write, understand, and speak English.</inlineHelpText>
        <label>Recommendation: English Ability</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_First_Name__c</fullName>
        <formula>Recommendation_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommendation: First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Last_Name__c</fullName>
        <formula>Recommendation_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommendation: Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Level_Of_Planning__c</fullName>
        <inlineHelpText>In your opinion, how would the applicant benefit from the program?</inlineHelpText>
        <label>Recommendation: Level Of Planning</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_Personal_Motivation__c</fullName>
        <label>Recommendation: Personal Motivation</label>
        <picklist>
            <picklistValues>
                <fullName>Outstanding (Top 5%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superior (Top Third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average (Middle Third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor (Bottom Third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendation_Position__c</fullName>
        <formula>Recommendation_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommendation: Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Potential_For_Growth__c</fullName>
        <label>Recommendation: Potential For Growth</label>
        <picklist>
            <picklistValues>
                <fullName>Outstanding (Top 5%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superior (Top Third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average (Middle Third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor (Bottom Third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendation_SWOT__c</fullName>
        <inlineHelpText>What do you consider the Applicant&apos;s strength and weaknesses?</inlineHelpText>
        <label>Recommendation: SWOT</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_Stress_Management__c</fullName>
        <inlineHelpText>This program is very intensive and students often feel highly pressured. Do you think the Applicant will be successful under these conditions?</inlineHelpText>
        <label>Recommendation: Stress Management</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_Waived_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommendation: Waived Access?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommendation_Work_Experience__c</fullName>
        <label>Recommendation: Work Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Outstanding (Top 5%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superior (Top Third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average (Middle Third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor (Bottom Third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_By__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent__r.Country__c)), &apos;Country&apos;,
IF(NOT(ISBLANK(Parent__r.Department__c)), &apos;Department&apos;,
IF(NOT(ISBLANK(Parent__r.Program__c)), &apos;Program&apos;, &apos;Other&apos;)))</formula>
        <label>Required By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_For__c</fullName>
        <label>Required For</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retake_Exam_Date__c</fullName>
        <inlineHelpText>This is when the score is too low or the test has not been taken to the satisfaction of Hult, the requirement for the applicant is to retake or submit the test information.</inlineHelpText>
        <label>Retake Exam: Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retake_Exam_Location__c</fullName>
        <inlineHelpText>The location for the test exam .</inlineHelpText>
        <label>Retake Exam: Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retake_Exam_Score__c</fullName>
        <label>Retake Exam: Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sponser__c</fullName>
        <label>Who will sponsor/fund your education?</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization other than Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undetermined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SponsorerAddress__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_UI__c</fullName>
        <formula>IMAGE(&apos;/img/samples/light_&apos; + IF(OR(Verified__c, Approved__c, Waived__c), &apos;green&apos;, IF(Supplied__c, &apos;yellow&apos;, &apos;red&apos;)) + &apos;.gif&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Date__c</fullName>
        <label>Supplied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplied?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlocked_Date__c</fullName>
        <label>Unlocked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unlocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unlocked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waived_Date__c</fullName>
        <label>Waived Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waived?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiver_Reason__c</fullName>
        <label>Waiver Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Description__c</columns>
        <columns>Country__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Required_For__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Opportunity__c</columns>
        <columns>Identifier_Unique__c</columns>
        <columns>Comparison_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Supplied_Docs</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Supplied__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Supplied Docs</label>
    </listViews>
    <nameField>
        <label>Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <recordTypes>
        <fullName>Education</fullName>
        <active>true</active>
        <label>Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment</fullName>
        <active>true</active>
        <label>Employment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Essay</fullName>
        <active>true</active>
        <label>Essay</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exam</fullName>
        <active>true</active>
        <label>Exam</label>
    </recordTypes>
    <recordTypes>
        <fullName>Insurance</fullName>
        <active>true</active>
        <label>Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan</fullName>
        <active>true</active>
        <label>Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payable</fullName>
        <active>true</active>
        <label>Payable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payment</fullName>
        <active>true</active>
        <label>Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recommendation</fullName>
        <active>true</active>
        <label>Recommendation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scholarship</fullName>
        <active>true</active>
        <label>Scholarship</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsorship</fullName>
        <active>true</active>
        <label>Sponsorship</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transcript</fullName>
        <active>true</active>
        <label>Transcript</label>
    </recordTypes>
    <recordTypes>
        <fullName>Visa</fullName>
        <active>true</active>
        <label>Visa</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Invalid_Opportunity_On_Template</fullName>
        <active>true</active>
        <errorConditionFormula>OR(NOT(ISBLANK(Department__c)), NOT(ISBLANK(Program__c)), NOT(ISBLANK(Country__c))) &amp;&amp; NOT(ISBLANK(Opportunity__c))</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>Internal or integration error: Template requirements cannot also be related to a specific opportunity. A template requirement is one that is directly associated with a Department, Country, or Program. Please remove the Opportunity relationship.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Parenting</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Parent__r.Parent__c))</errorConditionFormula>
        <errorDisplayField>Parent__c</errorDisplayField>
        <errorMessage>Internal or integration error: Invalid parenting: a requirement cannot be a child of another child requirement. The top level requirement is the template, and the immediate children are mapped to opportunities. There is no valid third level structure.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Parenting_Opportunity_Missing</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Parent__c)) &amp;&amp; ISBLANK(Opportunity__c)</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>Internal or integration error: All requirements belonging to an opportunity must also mapped to a parent requirement, and vice-versa.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Parenting_Opportunity_Present</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Parent__c) &amp;&amp; NOT(ISBLANK(Opportunity__c)) &amp;&amp; ISBLANK(Contact__c)</errorConditionFormula>
        <errorDisplayField>Parent__c</errorDisplayField>
        <errorMessage>Internal or integration error: All requirements belonging to an opportunity (and not linked to a contact) must also mapped to a parent requirement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mismatched_Program_And_Country</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Parent__r.Country__c)), Parent__r.Country__c != Opportunity__r.Program__r.Country__c)</errorConditionFormula>
        <errorDisplayField>Parent__c</errorDisplayField>
        <errorMessage>Internal or integration error: The Opportunity&apos;s Program&apos;s Country does not match the Parent Requirement&apos;s Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mismatched_Program_And_Department</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Parent__r.Department__c)), Parent__r.Department__c != Opportunity__r.Program__r.Department__c) &amp;&amp;  $Setup.Setting_Disabled__c.Validate_Requirement_Program__c != true</errorConditionFormula>
        <errorDisplayField>Parent__c</errorDisplayField>
        <errorMessage>Internal or integration error: The Opportunity&apos;s Program&apos;s Department does not match the Parent Requirement&apos;s Department.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Requirement_Validation</fullName>
        <active>false</active>
        <description>a single requirement can only be associated to either a country or a department or a Program at a time</description>
        <errorConditionFormula>OR( 
       AND(   NOT( ISBLANK( Country__c )) , NOT( ISBLANK(  Department__c  ))    ),     
      AND(    NOT( ISBLANK( Program__c )) , NOT( ISBLANK( Department__c ))     ),   
      AND(    NOT( ISBLANK(Country__c))  , NOT( ISBLANK(Program__c))                ), 
      AND(    NOT( ISBLANK(Country__c))  ,  NOT( ISBLANK(Department__c  )),  NOT( ISBLANK( Program__c))      ) 
)</errorConditionFormula>
        <errorMessage>A single requirement can only be associated to either a country or a department or a Program at a time.</errorMessage>
    </validationRules>
</CustomObject>